Flex-Spacing-Correction

--- a/css/torgeternity.css
+++ b/css/torgeternity.css
@@ -1972,7 +1972,7 @@ p.skill-chat-title.skilled {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 /*.chat-message.skill-roll-menu > a {
